[package]
name = "nrf-smartled"
version = "0.4.0"
description = "A Smart LED (WS2812) driver using hardware acceleration"
repository = "https://github.com/jamesmunns/nrf-smartled"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2021"
readme = "README.md"

categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"

[dependencies]
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", features = [
  "unstable-pac",
] }
smart-leds-trait = "0.2.1"

[features]
nightly = ["embassy-nrf/nightly", "embassy-nrf/unstable-traits"]
default = ["nightly", "52840"]
52810 = ["embassy-nrf/nrf52810"]
52832 = ["embassy-nrf/nrf52832"]
52840 = ["embassy-nrf/nrf52840"]

[package.metadata.docs.rs]
all-features = false
features = ["52840"]
